Finished the project

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Jost&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <title>Fengr</title>
 </head>
 <body>
+    <!--Header with logo-->
    <header class="header">
     <img class="header__logo" src="images/fengr_logo.svg" alt="Fengr logo">
    </header>
+   <!--Navbar-->
    <div class="navbar">
         <ul class="navbar__list">
             <li class="navbar__list__item">
@@ -27,6 +29,7 @@
             </li>
         </ul>
    </div>
+   <!--Main content-->
     <main class="main">
         <h1 class="main__header">FENGR</h1>
         <section class="about">
@@ -50,6 +53,7 @@
             </ul>
         </section>
     </main>
+    <!--Footer containing contact info-->
     <footer class="contact">
         <ul class="contact__list">
             <li class="contact__list__item">Fengr</li>
